[2357] - refactor collapse method; fix finish processing flag

--- a/src/scss/voicebase-portal.scss
+++ b/src/scss/voicebase-portal.scss
@@ -288,6 +288,10 @@
     margin: 15px 0;
   }
 
+  .media-processing-loader {
+    margin-bottom: 35px;
+  }
+
   .media-upload-loader .raml-console-spinner:after {
     content: 'Uploading file..';
   }
